objects/FSL__Overlap_Event__e.object
<CustomObject>
    <description>aSD</description>
    <fields>
        <fullName>FSL__Event_Type__c</fullName>
        <label>Event_Type</label>
        <length>64</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL__Overlap_Length_in_Minutes__c</fullName>
        <label>Overlap_Length_ in_ Minutes</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Record_ID__c</fullName>
        <label>Record_ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL__Resource_ID__c</fullName>
        <label>Resource_ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL__Resource_Time_Zone__c</fullName>
        <label>Resource_Time_Zone</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL__Start__c</fullName>
        <label>Start</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FSL__Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL__Territory_ID__c</fullName>
        <label>Territory_ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL__Territory_Name__c</fullName>
        <label>Territory_Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL__User_ID__c</fullName>
        <label>User_ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL__Work_Type_ID__c</fullName>
        <label>Work_Type_ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL__Work_Type_Name__c</fullName>
        <label>Work_Type_Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Overlap_Event</label>
    <pluralLabel>Overlap_Events</pluralLabel>
</CustomObject>